--- a/app/views/notes/index.html.haml
+++ b/app/views/notes/index.html.haml
@@ -2,4 +2,4 @@
   %h2= link_to note.title, note
   %p= time_ago_in_words(note.created_at)
 
-= linkt_to "New Note", new_note_path
+= link_to "New Note", new_note_path
