--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,1 +1,31 @@
-%h1 This is the welcome placeholder
+#banner
+  .banner_content
+    %h1 NoteNote
+    %p Your online notebook. Never forget an idea again.
+    %button= link_to "Sign Up", new_user_registration_path
+#testimonial
+  .wrapper
+    %p.quote "Your Online NoteSpace!"
+    %p.name - Brandon Andrew LoGuercio
+#callouts
+  .callout_inner
+    .wrapper
+      .callout
+        %h2 Notes
+        %p Viral Echo Park Intelligentsia tattooed, craft beer organic authentic polaroid tousled mlkshk church-key. Fanny pack Banksy vegan  authentic Helvetica.
+
+      .callout
+        %h2 Notes
+        %p Viral Echo Park Intelligentsia tattooed, craft beer organic authentic polaroid tousled mlkshk church-key. Fanny pack Banksy vegan  authentic Helvetica.
+
+      .callout
+        %h2 Notes
+        %p Viral Echo Park Intelligentsia tattooed, craft beer organic authentic polaroid tousled mlkshk church-key. Fanny pack Banksy vegan  authentic Helvetica.
+#bottom_cta
+  .wrapper
+    %h2 Be a part of NoteSpace!
+    %p Sign up?
+    %button= link_to "Click Me!", new_user_registration_path
+
+%footer
+  %p &copy; Brandon Andrew LoGuercio
