--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,12 +1,12 @@
 #banner
   .banner_content
-    %h1 NoteNote
-    %p Your online notebook. Never forget an idea again.
+    %h1 NoteSpace
+    %p Your online notebook.
     %button= link_to "Sign Up", new_user_registration_path
 #testimonial
   .wrapper
-    %p.quote "Your Online NoteSpace!"
-    %p.name - Brandon Andrew LoGuercio
+    %p.quote "The only way to take notes, NoteSpace!"
+    %p.name - Billy Cao
 #callouts
   .callout_inner
     .wrapper
@@ -23,9 +23,9 @@
         %p Viral Echo Park Intelligentsia tattooed, craft beer organic authentic polaroid tousled mlkshk church-key. Fanny pack Banksy vegan  authentic Helvetica.
 #bottom_cta
   .wrapper
-    %h2 Be a part of NoteSpace!
-    %p Sign up?
+    %h2 Create Your Own NoteSpace!
+    %p Sign up
     %button= link_to "Click Me!", new_user_registration_path
 
 %footer
-  %p &copy; Brandon Andrew LoGuercio
+  %p Brandon Andrew LoGuercio
