--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -5,8 +5,8 @@
     %button= link_to "Sign Up", new_user_registration_path
 #testimonial
   .wrapper
-    %p.quote "The only way to take notes, NoteSpace!"
-    %p.name - Billy Cao
+    %p.quote "NoteSpace, so hot right now, NoteSpace!"
+    %p.name - Jon "Nutjob" Richardson
 #callouts
   .callout_inner
     .wrapper
