Front page clean up

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -6,21 +6,21 @@
 #testimonial
   .wrapper
     %p.quote "NoteSpace, so hot right now, NoteSpace!"
-    %p.name - Jon "Nutjob" Richardson
+    %p.name - Jon Richardson
 #callouts
   .callout_inner
     .wrapper
       .callout
-        %h2 Notes
-        %p Viral Echo Park Intelligentsia tattooed, craft beer organic authentic polaroid tousled mlkshk church-key. Fanny pack Banksy vegan  authentic Helvetica.
+        %h2 Improved organization
+        %p Previously, all of your notes would live in one jumbled folder, but Apple has improved your ability to keep things organized. You can create new folders now and move notes from one place to another. This way, you can have separate folders for different parts of your party planning, like your guest list, music selection, food, drinks, and more. You can also choose whether you want your note to live in iCloud, or just on your device.
 
       .callout
-        %h2 Notes
-        %p Viral Echo Park Intelligentsia tattooed, craft beer organic authentic polaroid tousled mlkshk church-key. Fanny pack Banksy vegan  authentic Helvetica.
+        %h2 A Better way to view your notes
+        %p Better organization helps, but so does being able to quickly see what your notes are. With the redesigned user interface, you can now view thumbnails of your notes to get a preview of embedded images, doodles or sketches, and videos that you might have jotted down or stored. That way, you can quickly find the questions you wanted answered about the party venue by just glancing through your notes until you find the one with the photo of the place.
 
       .callout
-        %h2 Notes
-        %p Viral Echo Park Intelligentsia tattooed, craft beer organic authentic polaroid tousled mlkshk church-key. Fanny pack Banksy vegan  authentic Helvetica.
+        %h2 More text formatting options
+        %p There are now some text formatting options you can use to make your notes richer and more expressive. You can create titles, heading styles, numbered or bulleted lists, and more. Since iOS 8, you’ve been able to make your text bold, italicized, or underlined, but the additional formatting presets makes Notes easier than ever to make great lists and outlines.
 #bottom_cta
   .wrapper
     %h2 Create Your Own NoteSpace!
