--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,7 +8,7 @@
 %body
   %header
     .header_inner
-      = link_to image_tag( 'logo.svg'), root_path, id: "logo"
+      #{ link_to 'BRANDON ANDREW LOGUERCIO', '/'}
       %nav
         - if user_signed_in?
           = link_to "New Note", new_note_path
